<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/project_menu" android:checkableBehavior="none">
        <item
            android:id="@+id/manage_projects"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/manage_projects" />
        <item
            android:id="@+id/share_project"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share_project" />
        <item
            android:id="@+id/import_project"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/import_project" />
    </group>

    <group android:id="@+id/settings_menu" android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/user_menu" android:checkableBehavior="none">
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>

</menu>
