<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/share"
        android:id="@+id/action_menu_share"
        android:orderInCategory="1"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/edit"
        android:id="@+id/action_menu_edit"
        android:orderInCategory="2"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/delete"
        android:id="@+id/action_menu_delete"
        android:orderInCategory="3"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>